# mlb-api-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  SOLUTION.md  generic_api.py  main.py  mlb_api.py  pyproject.toml  smithery.yaml
.github/workflows/: ci.yml
tests/: run_coverage.py  test_mlb_api.py
