[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-project"
version = "0.1.0"
description = "MCP Project"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "fastapi-mcp>=0.3.4",
    "python-mlb-statsapi>=0.5.26",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 
