[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlb-api-mcp"
version = "0.1.0"
description = "MLB API MCP Server - Model Context Protocol server for MLB statistics and baseball data"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.68.0",
    "fastmcp>=2.10.0",
    "python-mlb-statsapi>=0.5.26",
    "uvicorn[standard]>=0.15.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 